--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <html>
     <h1>Aileen's Portfolio</h1>
     <img src="/bioPic4.jpg"  
-         width="275" 
-         height="275" />
-/>
+         width="275" />
 </html>
