--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
     <h1>Aileen's Portfolio</h1>
-    <img src="/bioPic4.jpg"  
+    <img src="/bioPic4.png"  
          width="275" />
 </html>
